Prepare search on filters lists

--- a/css/_home.scss
+++ b/css/_home.scss
@@ -89,13 +89,13 @@ html, body{
                     color: white;
                     opacity: 1;
                 }
-                &#ingredients{
+                &#search-ingredients{
                     background: #3282f7;
                 }
-                &#appareils{
+                &#search-appareils{
                     background: #68d9a4;
                 }
-                &#ustensiles{
+                &#search-ustensiles{
                     background: #ed6454;
                 }
             }
