--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 html, body {
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
 .wrapper {
@@ -8,14 +8,11 @@ html, body {
   width: 98%;
   margin: auto;
 }
-
 .wrapper .logo {
-  width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
   margin: auto;
 }
-
 .wrapper #searchbar {
   width: 100%;
   background: #eee;
@@ -25,26 +22,15 @@ html, body {
   border-radius: 8px;
   font-size: 1.5em;
 }
-
 .wrapper .tags {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 8px;
 }
-
 .wrapper .tags .tag {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   border-radius: 5px;
   padding: 8px;
   color: white;
@@ -53,56 +39,42 @@ html, body {
   font-weight: 700;
   cursor: pointer;
 }
-
 .wrapper .tags .tag::after {
-  content: '';
+  content: "";
   display: inline-block;
   width: 20px;
   height: 20px;
   margin-left: 5px;
   background: url(../img/cancel_tag.svg) no-repeat center;
   background-size: cover;
-  -webkit-transition: .2s;
-  transition: .2s;
+  transition: 0.2s;
 }
-
 .wrapper .tags .tag:hover::after {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
-
 .wrapper .tags .blue {
   background: #3282f7;
 }
-
 .wrapper .tags .orange {
   background: #ed6454;
 }
-
 .wrapper .tags .green {
   background: #68d9a4;
 }
-
 .wrapper .filters {
   margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 5px;
 }
-
 .wrapper .filters .filters-container {
   position: relative;
   width: 150px;
-  -webkit-transition: .3s;
-  transition: .3s;
+  transition: 0.3s;
   z-index: 3;
 }
-
 .wrapper .filters .filters-container.opened {
   width: 72%;
 }
-
 .wrapper .filters .filters-container input {
   color: white;
   border: none;
@@ -110,52 +82,34 @@ html, body {
   margin-right: 8px;
   width: 100%;
   border-radius: 5px;
-  -webkit-transition: .3s;
-  transition: .3s;
+  transition: 0.3s;
   font-size: 18px;
   font-weight: 700;
   border: none;
   outline: none;
 }
-
-.wrapper .filters .filters-container input::-webkit-input-placeholder {
+.wrapper .filters .filters-container input::-moz-placeholder {
   color: white;
   opacity: 1;
 }
-
-.wrapper .filters .filters-container input:-ms-input-placeholder {
-  color: white;
-  opacity: 1;
-}
-
-.wrapper .filters .filters-container input::-ms-input-placeholder {
-  color: white;
-  opacity: 1;
-}
-
 .wrapper .filters .filters-container input::placeholder {
   color: white;
   opacity: 1;
 }
-
-.wrapper .filters .filters-container input#ingredients {
+.wrapper .filters .filters-container input#search-ingredients {
   background: #3282f7;
 }
-
-.wrapper .filters .filters-container input#appareils {
+.wrapper .filters .filters-container input#search-appareils {
   background: #68d9a4;
 }
-
-.wrapper .filters .filters-container input#ustensiles {
+.wrapper .filters .filters-container input#search-ustensiles {
   background: #ed6454;
 }
-
 .wrapper .filters .filters-container ul {
   position: absolute;
   top: 45px;
   list-style: none;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   color: white;
   padding: 10px 18px;
   margin: 0;
@@ -163,19 +117,15 @@ html, body {
   border-radius: 5px;
   width: 96%;
 }
-
 .wrapper .filters .filters-container ul#ingredients-list {
   background: #3282f7;
 }
-
 .wrapper .filters .filters-container ul#appareils-list {
   background: #68d9a4;
 }
-
 .wrapper .filters .filters-container ul#ustensils-list {
   background: #ed6454;
 }
-
 .wrapper .filters .filters-container ul li {
   text-transform: capitalize;
   font-weight: 400;
@@ -184,14 +134,11 @@ html, body {
 }
 
 .recipesGrid {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
   margin: 20px 0;
 }
-
 .recipesGrid .recipe {
   background: #eee;
   border-radius: 10px;
@@ -199,7 +146,6 @@ html, body {
   text-overflow: clip;
   overflow: hidden;
 }
-
 .recipesGrid .recipe img {
   -o-object-fit: cover;
      object-fit: cover;
@@ -207,32 +153,22 @@ html, body {
   height: 50%;
   border-radius: 10px 10px 0 0;
 }
-
 .recipesGrid .recipe .content {
   padding: 20px;
 }
-
 .recipesGrid .recipe .content .content-head {
   margin-bottom: 20px;
   font-size: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .recipesGrid .recipe .content .content-head .timer {
   font-weight: 600;
   position: relative;
 }
-
 .recipesGrid .recipe .content .content-head .timer::before {
-  content: '';
+  content: "";
   background: url(../img/timer.svg) no-repeat;
   background-size: cover;
   width: 25px;
@@ -241,11 +177,9 @@ html, body {
   position: absolute;
   left: -30px;
 }
-
 .recipesGrid .recipe .content .ingredients, .recipesGrid .recipe .content .description {
   display: inline-block;
   vertical-align: top;
   width: 47%;
   font-size: 12px;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
