--- a/css/_home.scss
+++ b/css/_home.scss
@@ -4,12 +4,18 @@ html, body{
 }
 
 .wrapper{
-    max-width: 1280px;
+    max-width: 1240px;
     width: 98%;
     margin: auto;
     .logo{
-        width: max-content;
+        max-width: 268px;
+        max-height: 93px;
         margin: auto;
+        img{
+            width: 268px;
+            height: 93px;
+            object-fit: cover;
+        }
     }
     #searchbar{
         width: 100%;
@@ -72,6 +78,9 @@ html, body{
             z-index: 3;
             &.opened{
                 width: 72%;
+                ul{
+                    display: block;
+                }
             }
             input{
                 color: white;
@@ -103,7 +112,7 @@ html, body{
                 position:absolute;
                 top: 45px;
                 list-style: none;
-                //display: none;
+                display: none;
                 grid-template-columns: repeat(3, 1fr);
                 color: white;
                 padding: 10px 18px;
@@ -111,6 +120,7 @@ html, body{
                 font-size: 18px;
                 border-radius: 5px;
                 width: 96%;
+                columns: 3;
                 &#ingredients-list{
                     background: #3282f7;
                 }
@@ -125,6 +135,9 @@ html, body{
                     font-weight: 400;
                     margin: 5px 0;
                     cursor: pointer;
+                    &:hover{
+                        text-decoration: underline;
+                    }
                 }
             }
         }
