--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 html, body {
-  font-family: "Roboto";
+  font-family: 'Roboto';
 }
 
 .wrapper {
-  max-width: 1280px;
+  max-width: 1240px;
   width: 98%;
   margin: auto;
 }
+
 .wrapper .logo {
-  width: -moz-max-content;
-  width: max-content;
+  max-width: 268px;
+  max-height: 93px;
   margin: auto;
 }
+
+.wrapper .logo img {
+  width: 268px;
+  height: 93px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .wrapper #searchbar {
   width: 100%;
   background: #eee;
@@ -22,15 +31,26 @@ html, body {
   border-radius: 8px;
   font-size: 1.5em;
 }
+
 .wrapper .tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 8px;
 }
+
 .wrapper .tags .tag {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: 5px;
   padding: 8px;
   color: white;
@@ -39,42 +59,60 @@ html, body {
   font-weight: 700;
   cursor: pointer;
 }
+
 .wrapper .tags .tag::after {
-  content: "";
+  content: '';
   display: inline-block;
   width: 20px;
   height: 20px;
   margin-left: 5px;
   background: url(../img/cancel_tag.svg) no-repeat center;
   background-size: cover;
-  transition: 0.2s;
+  -webkit-transition: .2s;
+  transition: .2s;
 }
+
 .wrapper .tags .tag:hover::after {
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
+
 .wrapper .tags .blue {
   background: #3282f7;
 }
+
 .wrapper .tags .orange {
   background: #ed6454;
 }
+
 .wrapper .tags .green {
   background: #68d9a4;
 }
+
 .wrapper .filters {
   margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 5px;
 }
+
 .wrapper .filters .filters-container {
   position: relative;
   width: 150px;
-  transition: 0.3s;
+  -webkit-transition: .3s;
+  transition: .3s;
   z-index: 3;
 }
+
 .wrapper .filters .filters-container.opened {
   width: 72%;
 }
+
+.wrapper .filters .filters-container.opened ul {
+  display: block;
+}
+
 .wrapper .filters .filters-container input {
   color: white;
   border: none;
@@ -82,50 +120,75 @@ html, body {
   margin-right: 8px;
   width: 100%;
   border-radius: 5px;
-  transition: 0.3s;
+  -webkit-transition: .3s;
+  transition: .3s;
   font-size: 18px;
   font-weight: 700;
   border: none;
   outline: none;
 }
-.wrapper .filters .filters-container input::-moz-placeholder {
+
+.wrapper .filters .filters-container input::-webkit-input-placeholder {
   color: white;
   opacity: 1;
 }
+
+.wrapper .filters .filters-container input:-ms-input-placeholder {
+  color: white;
+  opacity: 1;
+}
+
+.wrapper .filters .filters-container input::-ms-input-placeholder {
+  color: white;
+  opacity: 1;
+}
+
 .wrapper .filters .filters-container input::placeholder {
   color: white;
   opacity: 1;
 }
+
 .wrapper .filters .filters-container input#search-ingredients {
   background: #3282f7;
 }
+
 .wrapper .filters .filters-container input#search-appareils {
   background: #68d9a4;
 }
+
 .wrapper .filters .filters-container input#search-ustensiles {
   background: #ed6454;
 }
+
 .wrapper .filters .filters-container ul {
   position: absolute;
   top: 45px;
   list-style: none;
-  grid-template-columns: repeat(3, 1fr);
+  display: none;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
   color: white;
   padding: 10px 18px;
   margin: 0;
   font-size: 18px;
   border-radius: 5px;
   width: 96%;
+  -webkit-columns: 3;
+          columns: 3;
 }
+
 .wrapper .filters .filters-container ul#ingredients-list {
   background: #3282f7;
 }
+
 .wrapper .filters .filters-container ul#appareils-list {
   background: #68d9a4;
 }
+
 .wrapper .filters .filters-container ul#ustensils-list {
   background: #ed6454;
 }
+
 .wrapper .filters .filters-container ul li {
   text-transform: capitalize;
   font-weight: 400;
@@ -133,12 +196,19 @@ html, body {
   cursor: pointer;
 }
 
+.wrapper .filters .filters-container ul li:hover {
+  text-decoration: underline;
+}
+
 .recipesGrid {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
   margin: 20px 0;
 }
+
 .recipesGrid .recipe {
   background: #eee;
   border-radius: 10px;
@@ -146,6 +216,7 @@ html, body {
   text-overflow: clip;
   overflow: hidden;
 }
+
 .recipesGrid .recipe img {
   -o-object-fit: cover;
      object-fit: cover;
@@ -153,22 +224,31 @@ html, body {
   height: 50%;
   border-radius: 10px 10px 0 0;
 }
-.recipesGrid .recipe .content {
-  padding: 20px;
-}
-.recipesGrid .recipe .content .content-head {
-  margin-bottom: 20px;
-  font-size: 20px;
+
+.recipesGrid .recipe .content-head {
+  padding: 0 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-.recipesGrid .recipe .content .content-head .timer {
+
+.recipesGrid .recipe .content-head h2 {
+  font-size: 18px;
+}
+
+.recipesGrid .recipe .content-head .timer {
   font-weight: 600;
   position: relative;
 }
-.recipesGrid .recipe .content .content-head .timer::before {
-  content: "";
+
+.recipesGrid .recipe .content-head .timer::before {
+  content: '';
   background: url(../img/timer.svg) no-repeat;
   background-size: cover;
   width: 25px;
@@ -176,10 +256,29 @@ html, body {
   display: inline-block;
   position: absolute;
   left: -30px;
+  top: 12px;
 }
-.recipesGrid .recipe .content .ingredients, .recipesGrid .recipe .content .description {
-  display: inline-block;
-  vertical-align: top;
-  width: 47%;
+
+.recipesGrid .recipe .card-content {
+  padding: 0 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: top;
+      -ms-flex-align: top;
+          align-items: top;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.recipesGrid .recipe .card-content .ingredients, .recipesGrid .recipe .card-content .description {
   font-size: 12px;
-}/*# sourceMappingURL=style.css.map */
+  width: 47%;
+}
+
+.recipesGrid .recipe .card-content .description {
+  padding: 0;
+  margin: 0;
+}
+/*# sourceMappingURL=style.css.map */
