--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,7 @@ html, body {
 .wrapper .logo img {
   width: 268px;
   height: 93px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .wrapper #searchbar {
@@ -33,24 +32,15 @@ html, body {
 }
 
 .wrapper .tags {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 8px;
 }
 
 .wrapper .tags .tag {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   border-radius: 5px;
   padding: 8px;
   color: white;
@@ -68,13 +58,11 @@ html, body {
   margin-left: 5px;
   background: url(../img/cancel_tag.svg) no-repeat center;
   background-size: cover;
-  -webkit-transition: .2s;
   transition: .2s;
 }
 
 .wrapper .tags .tag:hover::after {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .wrapper .tags .blue {
@@ -91,8 +79,6 @@ html, body {
 
 .wrapper .filters {
   margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 5px;
 }
@@ -100,7 +86,6 @@ html, body {
 .wrapper .filters .filters-container {
   position: relative;
   width: 150px;
-  -webkit-transition: .3s;
   transition: .3s;
   z-index: 3;
 }
@@ -120,7 +105,6 @@ html, body {
   margin-right: 8px;
   width: 100%;
   border-radius: 5px;
-  -webkit-transition: .3s;
   transition: .3s;
   font-size: 18px;
   font-weight: 700;
@@ -165,16 +149,14 @@ html, body {
   top: 45px;
   list-style: none;
   display: none;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   color: white;
   padding: 10px 18px;
   margin: 0;
   font-size: 18px;
   border-radius: 5px;
   width: 96%;
-  -webkit-columns: 3;
-          columns: 3;
+  columns: 3;
 }
 
 .wrapper .filters .filters-container ul#ingredients-list {
@@ -201,10 +183,8 @@ html, body {
 }
 
 .recipesGrid {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
   margin: 20px 0;
 }
@@ -218,8 +198,7 @@ html, body {
 }
 
 .recipesGrid .recipe img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: 50%;
   border-radius: 10px 10px 0 0;
@@ -227,15 +206,9 @@ html, body {
 
 .recipesGrid .recipe .content-head {
   padding: 0 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .recipesGrid .recipe .content-head h2 {
@@ -261,15 +234,9 @@ html, body {
 
 .recipesGrid .recipe .card-content {
   padding: 0 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: top;
-      -ms-flex-align: top;
-          align-items: top;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: start;
+  justify-content: space-between;
 }
 
 .recipesGrid .recipe .card-content .ingredients, .recipesGrid .recipe .card-content .description {
